plugins { id 'com.android.library' }

android {
    namespace 'com.warden.controlledsandbox.framework'
    compileSdk rootProject.ext.controlledCompileSdk
    buildToolsVersion rootProject.ext.controlledBuildTools
    defaultConfig { minSdk rootProject.ext.controlledMinSdk }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}